Commit changes for Presentation Course Controller, Views, Authentication

--- a/CleanArch/CleanArch.Mvc/appsettings.json
+++ b/CleanArch/CleanArch.Mvc/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "UniversityIdentityDBConnection": "Server=.;Database=UniversityIdentityDB;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "UniversityDBConnection": "Server=.;Database=UniversityDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "UniversityIdentityDBConnection": "Server=.\\sql2014;Database=UniversityIdentityDB;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "UniversityDBConnection": "Server=.\\sql2014;Database=UniversityDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
